<resources>
    <string name="app_name">Arepa Assembler</string>
    <string name="heading">Arepa Assembler</string>
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="plantain">Plantain</string>
    <string name="guasacaca">Guasacaca</string>
    <string name="queso">Queso</string>
    <string name="blackBeans">Black Beans</string>
    <string name="hotSauce">Hot Sauce</string>
    <string name="takeout">take out</string>
    <string name="arepaButton">Create</string>
    <string-array name="location">
        <item>Caracas</item>
        <item>Maracaibo</item>
        <item>Valencia</item>
    </string-array>
    <string name="message"> </string>
    <!--    <string name="feedbackHint" />-->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedbackHint">Feedback</string>
</resources>